tests/security/taintPopen/output.txt
ERROR: TaintedData - input.hack:1:13 - Detected tainted shell code